--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
-{% extends 'base.html' %}
+{% extends 'interactive_base.html' %}
 {% block title %}{{ i18n('home.title') }}{% endblock %}
 {% block content %}
-    <p>{{ i18n('test') }}</p>
+    <p>ah</p>
 {% endblock %}
