--- a/static/styles.css
+++ b/static/styles.css
@@ -5,7 +5,47 @@ html, body {
 
 body {
     font-family: Inter, sans-serif;
+    width: 100vw;
+    min-height: 100vh;
+    color: white;
+}
+
+.content {
     margin: 0 auto;
     padding: 0 20px;
     max-width: 960px;
+}
+
+.nav {
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    background-color: #4453da;
+    justify-content: center;
+}
+
+.nav .logo {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+}
+
+.nav .logo img {
+    height: 64px;
+    border-radius: 15px;
+}
+
+.nav .logo p {
+    font-size: 32px;
+    font-weight: bold;
+}
+
+.nav div {
+    display: flex;
+    align-items: center;
+}
+
+.nav div:nth-child(2) {
+    margin-left: 100px;
 }
