--- a/templates/interactive_base.html
+++ b/templates/interactive_base.html
@@ -3,7 +3,7 @@
     <div class="nav">
         <div>
             <div class="logo">
-                <object data="{{ url_for('static', filename='img/oculi/default.svg') }}"></object>
+                <img src="{{ url_for('static', filename='img/oculi/default.svg') }}"></img>
                 <p>LEARN</p>
             </div>
             <div class="nav-items">
@@ -15,6 +15,8 @@
             <button>{{ i18n('button.login') }}</button>
         </div>
     </div>
-    {% block content %}
-    {% endblock %}
+    <div class="content">
+        {% block content %}
+        {% endblock %}
+    </div>
 {% endblock %}
