load buttons style

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <title>Learn - {% block title %}{% endblock %}</title>
 
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='buttons.css') }}">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
