--- a/static/styles.css
+++ b/static/styles.css
@@ -14,6 +14,7 @@ body {
     margin: 0 auto;
     padding: 0 20px;
     max-width: 960px;
+    width: 90%;
 }
 
 .nav {
@@ -21,7 +22,10 @@ body {
     display: flex;
     align-items: center;
     background-color: #4453da;
-    justify-content: center;
+    justify-content: space-between;
+    padding: 0 100px;
+    box-sizing: border-box;
+    flex-wrap: wrap;
 }
 
 .nav .logo {
@@ -41,11 +45,19 @@ body {
     font-weight: bold;
 }
 
-.nav div {
+.nav > div {
     display: flex;
     align-items: center;
+    gap: 30px;
+    flex-wrap: wrap;
 }
 
-.nav div:nth-child(2) {
-    margin-left: 100px;
+.nav > div:nth-child(2) {
+    margin-left: auto;
+}
+
+.nav-items {
+    display: flex;
+    gap: 15px;
+    flex-wrap: wrap;
 }
