--- a/static/styles.css
+++ b/static/styles.css
@@ -61,3 +61,9 @@ body {
     gap: 15px;
     flex-wrap: wrap;
 }
+
+@media screen and (max-width: 800px) {
+    .nav {
+        padding: 0 30px;
+    }
+}
