--- a/templates/interactive_base.html
+++ b/templates/interactive_base.html
@@ -7,8 +7,8 @@
                 <p>LEARN</p>
             </div>
             <div class="nav-items">
-                <p>{{ i18n('nav.subjects') }}</p>
-                <p>{{ i18n('nav.about') }}</p>
+                <a href="/"><p>{{ i18n('nav.subjects') }}</p></a>
+                <a><p>{{ i18n('nav.about') }}</p></a>
             </div>
         </div>
         <div>
