--- a/static/styles.css
+++ b/static/styles.css
@@ -7,7 +7,7 @@ body {
     font-family: Inter, sans-serif;
     width: 100vw;
     min-height: 100vh;
-    color: white;
+    color: #323036;
 }
 
 .content {
@@ -18,6 +18,7 @@ body {
 }
 
 .nav {
+    color: white;
     width: 100vw;
     display: flex;
     align-items: center;
