now go to login page

--- a/templates/interactive_base.html
+++ b/templates/interactive_base.html
@@ -12,7 +12,7 @@
             </div>
         </div>
         <div>
-            <button>{{ i18n('button.login') }}</button>
+            <a href="{{ url_for('login') }}"><button>{{ i18n('button.login') }}</button></a>
         </div>
     </div>
     <div class="content">
