button border variable

--- a/static/buttons.css
+++ b/static/buttons.css
@@ -8,18 +8,18 @@ button {
     border-radius: 30px;
 
     border: none;
-    border-bottom: 4px solid #d6d3d9;
+    border-bottom: 4px solid var(--button-bottom-border);
     cursor: pointer;
 
     transition: 0.1s;
 }
 
 button:hover {
-    border-bottom: 8px solid #d6d3d9;
+    border-bottom: 8px solid var(--button-bottom-border);
     transform: translateY(-3px);
 }
 
 button:active {
-    border-bottom: 4px solid #d6d3d9;
+    border-bottom: 4px solid var(--button-bottom-border);
     transform: translateY(2px);
 }
