remove exclamation marks

--- a/templates/login.html
+++ b/templates/login.html
@@ -10,11 +10,11 @@
             </div>
             <div class="card" onclick="location.replace('{{ url_for('login_student') }}')">
                 <img src="{{ url_for('static', filename='img/oculi/junior.svg') }}">
-                <p>{{ i18n('account-type.student') }}!</p>
+                <p>{{ i18n('account-type.student') }}</p>
             </div>
             <div class="card" onclick="location.replace('{{ url_for('login_teacher') }}')">
                 <img src="{{ url_for('static', filename='img/oculi/teacher.svg') }}">
-                <p>{{ i18n('account-type.teacher') }}!</p>
+                <p>{{ i18n('account-type.teacher') }}</p>
             </div>
         </div>
     </div>
