buttons disabled mode

--- a/static/buttons.css
+++ b/static/buttons.css
@@ -8,18 +8,27 @@ button {
     border-radius: 30px;
 
     border: none;
-    border-bottom: 4px solid var(--button-bottom-border);
-    cursor: pointer;
 
     transition: 0.1s;
 }
 
-button:hover {
+button:enabled {
+    cursor: pointer;
+    border-bottom: 4px solid var(--button-bottom-border);
+}
+
+button:hover:enabled {
     border-bottom: 8px solid var(--button-bottom-border);
     transform: translateY(-3px);
 }
 
-button:active {
+button:active:enabled {
     border-bottom: 4px solid var(--button-bottom-border);
     transform: translateY(2px);
+}
+
+button[disabled] {
+    background-color: #aaafba;
+    color: #fcfbfc;
+    font-weight: normal;
 }
