--- a/static/styles.css
+++ b/static/styles.css
@@ -134,7 +134,7 @@ body {
     transform: scale(0.95);
 }
 
-input[type=text], input[type=password] {
+input[type=text], input[type=password], input[type=email] {
     padding: 15px 10px;
     border: 0;
     border-radius: 15px;
@@ -146,7 +146,7 @@ input[type=text], input[type=password] {
     transition: 0.1s;
 }
 
-input[type=text]:focus, input[type=password]:focus {
+input[type=text]:focus, input[type=password]:focus, input[type=email]:focus {
     border-bottom: 2px solid #e3e3e3;
 }
 
