--- a/templates/login/student.html
+++ b/templates/login/student.html
@@ -11,7 +11,7 @@
                    placeholder="{{ i18n('placeholder.password') }}">
 
             <div>
-                <a href="{{ url_for('login') }}">Back</a>
+                <a href="{{ url_for('login') }}">{{ i18n('button.back') }}</a>
                 <button class="green" id="submit" type="submit" disabled>{{ i18n('button.login') }}</button>
             </div>
         </form>
