redirect to teacher register page

--- a/templates/login/teacher.html
+++ b/templates/login/teacher.html
@@ -9,7 +9,7 @@
                    placeholder="{{ i18n('placeholder.password') }}">
 
             <div>
-                <a href="{{ url_for('login') }}">{{ i18n('button.register') }}</a>
+                <a href="{{ url_for('register_teacher') }}">{{ i18n('button.register') }}</a>
                 <button class="green" id="submit" type="submit" disabled>{{ i18n('button.login') }}</button>
             </div>
         </form>
