--- a/templates/login/student.html
+++ b/templates/login/student.html
@@ -3,11 +3,11 @@
     <div class="center">
         <form method="post">
             <h1 style="margin-right: auto">{{ i18n('text.login-student') }}</h1>
-            <input minlength="8" maxlength="8" id="classcode" type="text"
+            <input minlength="8" maxlength="8" id="classcode" type="text" name="classcode"
                    placeholder="{{ i18n('placeholder.classcode') }}">
-            <input minlength="2" maxlength="20" id="username" type="text"
+            <input minlength="2" maxlength="20" id="username" type="text" name="username"
                    placeholder="{{ i18n('placeholder.username') }}">
-            <input minlength="4" maxlength="30" id="password" type="password"
+            <input minlength="4" maxlength="30" id="password" type="password" name="password"
                    placeholder="{{ i18n('placeholder.password') }}">
 
             <div>
