--- a/templates/login/teacher.html
+++ b/templates/login/teacher.html
@@ -3,9 +3,9 @@
     <div class="center">
         <form method="post">
             <h1 style="margin-right: auto">{{ i18n('text.login-teacher') }}</h1>
-            <input minlength="8" maxlength="50" id="email" type="email"
+            <input minlength="8" maxlength="50" id="email" type="email" name="email"
                    placeholder="{{ i18n('placeholder.email') }}">
-            <input minlength="8" maxlength="50" id="password" type="password"
+            <input minlength="8" maxlength="50" id="password" type="password" name="password"
                    placeholder="{{ i18n('placeholder.password') }}">
 
             <div>
