--- a/templates/register/personal.html
+++ b/templates/register/personal.html
@@ -3,11 +3,11 @@
     <div class="center">
         <form method="post">
             <h1 style="margin-right: auto">{{ i18n('text.register-personal') }}</h1>
-            <input minlength="8" maxlength="50" id="email" type="email"
+            <input minlength="8" maxlength="50" id="email" type="email" name="name"
                    placeholder="{{ i18n('placeholder.email') }}">
-            <input minlength="4" maxlength="26" id="username" type="text"
+            <input minlength="4" maxlength="26" id="username" type="text" name="username"
                    placeholder="{{ i18n('placeholder.username') }}">
-            <input minlength="8" maxlength="50" id="password" type="password"
+            <input minlength="8" maxlength="50" id="password" type="password" name="password"
                    placeholder="{{ i18n('placeholder.password') }}">
 
             <div>
