--- a/templates/interactive_base.html
+++ b/templates/interactive_base.html
@@ -12,10 +12,22 @@
             </div>
         </div>
         <div>
-            <a href="{{ url_for('login') }}"><button>{{ i18n('button.login') }}</button></a>
+            <a href="{{ url_for('login') }}">
+                <button>{{ i18n('button.login') }}</button>
+            </a>
         </div>
     </div>
     <div class="content">
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <ul class="flashes">
+                    {% for message in messages %}
+                        <li>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
+
         {% block content %}
         {% endblock %}
     </div>
