--- a/templates/register/personal.html
+++ b/templates/register/personal.html
@@ -3,7 +3,7 @@
     <div class="center">
         <form method="post">
             <h1 style="margin-right: auto">{{ i18n('text.register-personal') }}</h1>
-            <input minlength="8" maxlength="50" id="email" type="email" name="name"
+            <input minlength="8" maxlength="50" id="email" type="email" name="email"
                    placeholder="{{ i18n('placeholder.email') }}">
             <input minlength="4" maxlength="26" id="username" type="text" name="username"
                    placeholder="{{ i18n('placeholder.username') }}">
