--- a/static/styles.css
+++ b/static/styles.css
@@ -142,6 +142,7 @@ input[type=text], input[type=password], input[type=email] {
     outline: 0;
     border-bottom: 2px solid white;
     font-size: 15px;
+    font-family: Inter, sans-serif;
 
     transition: 0.1s;
 }
