--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,17 @@
 {% extends 'interactive_base.html' %}
 {% block title %}{{ i18n('home.title') }}{% endblock %}
-{% block content %}
-    <p>ah</p>
+{% block after_content %}
+    <div class="hero">
+        <div class="content">
+            <h1>{{ i18n('hero.title') }}</h1>
+            <p>{{ i18n('hero.description') }}</p>
+            <a href="{{ url_for('register') }}">
+                <button class="green" style="position: absolute">{{ i18n('button.register') }}</button>
+            </a>
+        </div>
+    </div>
+    <div class="content" style="display: flex; flex-direction: column; align-items: center;">
+        <h1>Join the Beta</h1>
+        <p style="max-width: 550px; text-align: center">SnackBag LEARN is a vocabulary learning platform that is still in its beta phase. If you would like a guided tour and full access over the platform, send us an email to <a href="mailto:jx.snack@gmail.com">jx.snack@gmail.com</a></p>
+    </div>
 {% endblock %}
