--- a/templates/interactive_base.html
+++ b/templates/interactive_base.html
@@ -25,7 +25,7 @@
             {% endif %}
         </div>
     </div>
-    <div class="content">
+    <div class="content {% block content_classes %}{% endblock %}">
         {% with messages = get_flashed_messages() %}
             {% if messages %}
                 <ul class="flashes">
@@ -39,4 +39,6 @@
         {% block content %}
         {% endblock %}
     </div>
+    {% block after_content %}
+    {% endblock %}
 {% endblock %}
