--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends 'interactive_base.html' %}
-{% block title %}{{ i18n('home.title') }}{% endblock %}
+{% block title %}{{ i18n('title.home') }}{% endblock %}
 {% block after_content %}
     <div class="hero">
         <div class="content">
