add login title

--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -1,4 +1,5 @@
 {% extends 'interactive_base.html' %}
+{% block title %}{{ i18n('title.login') }}{% endblock %}
 {% block content %}
     <div class="center">
         <h1 class="big-text">{{ i18n('account-select.title') }}</h1>
