--- a/templates/login/teacher.html
+++ b/templates/login/teacher.html
@@ -1,4 +1,5 @@
 {% extends 'interactive_base.html' %}
+{% block title %}{{ i18n('title.login.teacher') }}{% endblock %}
 {% block content %}
     <div class="center">
         <form method="post">
