--- a/templates/register/personal.html
+++ b/templates/register/personal.html
@@ -1,4 +1,5 @@
 {% extends 'interactive_base.html' %}
+{% block title %}{{ i18n('title.register.personal') }}{% endblock %}
 {% block content %}
     <div class="center">
         <form method="post">
