--- a/templates/panel/base.html
+++ b/templates/panel/base.html
@@ -14,7 +14,7 @@
         </a>
 
         <div class="panel-nav-parts">
-            <p><i class="fa-solid fa-house"></i> {{ i18n('button.home') }}</p>
+            <a href="{{ url_for('panel') }}"><p><i class="fa-solid fa-house"></i> {{ i18n('button.home') }}</p></a>
             <p><i class="fa-solid fa-book"></i> {{ i18n('button.learn') }}</p>
             <p><i class="fa-solid fa-earth-americas"></i> {{ i18n('button.subjects') }}</p>
             <p><i class="fa-solid fa-medal"></i> {{ i18n('button.leaderboard') }}</p>
