--- a/static/styles.css
+++ b/static/styles.css
@@ -88,6 +88,15 @@ body {
     background-color: rgba(0, 0, 0, 0.1);
 }
 
+.panel-nav-parts a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.panel-nav-parts a:visited {
+    color: inherit;
+}
+
 .panel-nav-parts p i {
     font-size: 22px;
 
