--- a/static/profile.css
+++ b/static/profile.css
@@ -44,6 +44,21 @@
     min-height: 100%;
 }
 
+.account-parts {
+    display: flex;
+    gap: 20px;
+}
+
+.account-part {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
+
+.account-part * {
+    margin: 0;
+}
+
 @media screen and (max-width: 800px) {
     .profile-boxes {
         flex-wrap: wrap;
