--- a/static/buttons.css
+++ b/static/buttons.css
@@ -22,6 +22,7 @@ button:enabled {
 button:hover:enabled {
     border-bottom: 8px solid var(--border-color);
     transform: translateY(-3px);
+    margin-bottom: -8px;
 }
 
 button:active:enabled {
