move to account

--- a/templates/panel/base.html
+++ b/templates/panel/base.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="big-funny-blue-buttons">
-            <i class="fa-solid fa-user"></i>
+            <a class="no-style" href="{{ url_for('account') }}"><i class="fa-solid fa-user"></i></a>
             <i class="fa-solid fa-bell"></i>
 
             <div style="margin-left: auto">
