--- a/static/styles.css
+++ b/static/styles.css
@@ -88,6 +88,10 @@ body {
     background-color: rgba(0, 0, 0, 0.1);
 }
 
+.panel-nav-parts p.active {
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
 .panel-nav-parts a {
     color: inherit;
     text-decoration: none;
