--- a/static/styles.css
+++ b/static/styles.css
@@ -301,6 +301,24 @@ a.no-style {
     display: none;
 }
 
+table {
+    border: 1px solid black;
+}
+
+tr:nth-child(1) {
+    background-color: rgba(0, 0, 0, 0.2);
+    font-weight: bold;
+}
+
+tr:nth-child(2n) {
+    background-color: rgba(0, 0, 0, 0.05);
+}
+
+tr {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+
 @media screen and (max-width: 800px) {
     .nav {
         padding: 0 30px;
