--- a/static/styles.css
+++ b/static/styles.css
@@ -318,6 +318,52 @@ tr {
     background-color: rgba(0, 0, 0, 0.1);
 }
 
+.subject-list {
+    display: flex;
+    gap: 10px;
+}
+
+.subject-list div {
+    display: flex;
+    background-color: white;
+    border-bottom: 2px solid lightgray;
+    padding: 15px 30px;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: 0.1s;
+    user-select: none;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.subject-list div:hover {
+    background-color: white;
+    border-bottom: 2px solid lightgray;
+    padding: 15px 30px;
+    border-radius: 20px;
+    filter: brightness(0.98);
+}
+
+.subject-list div:active {
+    filter: brightness(0.95);
+    transform: scale(0.95);
+}
+
+.subject-list div.active {
+    border-bottom: 4px solid lightgray;
+}
+
+.subject-list div img {
+    width: 20px;
+    height: 20px;
+    object-fit: fill;
+    border-radius: 50px;
+    transform: scale(1.3);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+}
 
 @media screen and (max-width: 800px) {
     .nav {
